# Transcriber

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  build.py  pyproject.toml  requirements.txt  transcribe_diarize.py
.github/workflows/: build.yml
